# heaps-TimeTracker

./: .gitignore  Main.hx  README.md  build.hxml
cpp-version/: .gitignore  CMakeLists.txt
cpp-version/src/: main.cpp
cpp-version/src/engine/: Game.h  GlDebug.hpp  GlUtils.hpp  InputState.h  Input_MouseState.h  RendererOGL.cpp  RendererOGL.h  Sprite.h  VertexArray.h  Window.h  WindowSdl.cpp  WindowSdl.h
cpp-version/src/engine/maths/: Matrix4.cpp  Matrix4.h  Rectangle.h  Vector3.cpp  Vector3.h
cpp-version/src/game/: Game.cpp
db/: timeTracking.cdb
design/: Time tracker.bmpr
heaps-version/: build.hxml
heaps-version/db/: timeTracking.cdb
heaps-version/res/: JetBrainsMonoMedium.fnt  style.css
heaps-version/src/: Constants.hx  HistoLine.hx
heaps-version/src/ui/: ContainerComp.hx  LayoutColComp.hx
res/: JetBrainsMonoBold.fnt  style.css  timeTracking.cdb
res/.tmp/: JetBrainsMonoBold.bfnt  JetBrainsMonoMedium.bfnt
src/: HistoBar.hx  Histogram.hx  Main.hx
src/dat/: Data.hx
src/ui/: BarComp.hx  BitmapTitleComp.hx  ButtonComp.hx  ContainerComp.hx  LayoutLineComp.hx  TitleComp.hx  ViewComp.hx
src/utils/: DateUtils.hx
